# flatbuffers

./: CMakeLists.txt
CMake/: BuildFlatBuffers.cmake
helpers/: resource_generator.cpp
include/flatbuffers/: code_generators.h  flatbuffers.h  hash.h  idl.h  namespace.h  reflection.h  reflection_generated.h  util.h
src/: flatc.cpp  idl_gen_cpp.cpp  idl_gen_fbs.cpp  idl_gen_general.cpp  idl_gen_go.cpp  idl_gen_js.cpp  idl_gen_php.cpp  idl_gen_python.cpp  idl_gen_text.cpp  idl_parser.cpp  reflection.cpp  util.cpp
